WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138829
HRTFDatabaseLoader is not an absolute condition to run audioContext
https://bugs.webkit.org/show_bug.cgi?id=138829
Summary
HRTFDatabaseLoader is not an absolute condition to run audioContext
Philippe Normand
Reported
2014-11-18 03:27:48 PST
Port Blink patch:
https://codereview.chromium.org/176683003
Attachments
patch
(11.85 KB, patch)
2014-11-18 04:11 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
patch
(11.84 KB, patch)
2014-11-18 04:23 PST
,
Philippe Normand
jer.noble
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2014-11-18 04:11:17 PST
Created
attachment 241780
[details]
patch
WebKit Commit Bot
Comment 2
2014-11-18 04:14:17 PST
Attachment 241780
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/webaudio/PannerNode.cpp:116: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 3
2014-11-18 04:23:10 PST
Created
attachment 241783
[details]
patch
Philippe Normand
Comment 4
2014-11-18 08:31:59 PST
Committed
r176259
: <
http://trac.webkit.org/changeset/176259
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug