HRTFDatabaseLoader is not an absolute condition to run audioContext https://bugs.webkit.org/show_bug.cgi?id=138829

This patch is a port of the following Blink revision by
<keonho07.kim@samsung.com>:
<https://src.chromium.org/viewvc/blink?revision=167887&view=revision>

The Database is still loaded synchronously to cope with the single CPU
core of the Raspberry Pi.