Source/WebCore/Modules/webaudio/AudioContext.cpp
@@ -139,13 +139,6 @@ AudioContext::AudioContext(Document* document)
     constructCommon();
 
     m_destinationNode = DefaultAudioDestinationNode::create(this);
-
-    // This sets in motion an asynchronous loading mechanism on another thread.
-    // We can check m_hrtfDatabaseLoader->isLoaded() to find out whether or not it has been fully loaded.
-    // It's not that useful to have a callback function for this since the audio thread automatically starts rendering on the graph
-    // when this has finished (see AudioDestinationNode).
-    m_hrtfDatabaseLoader = HRTFDatabaseLoader::createAndLoadAsynchronouslyIfNecessary(sampleRate());
-    m_hrtfDatabaseLoader->waitForLoaderThreadCompletion();
 }
 
 // Constructor for offline (non-realtime) rendering.
@@ -164,9 +157,6 @@ AudioContext::AudioContext(Document* document, unsigned numberOfChannels, size_t
     , m_restrictions(NoRestrictions)
 {
     constructCommon();
-
-    // FIXME: the passed in sampleRate MUST match the hardware sample-rate since HRTFDatabaseLoader is a singleton.
-    m_hrtfDatabaseLoader = HRTFDatabaseLoader::createAndLoadAsynchronouslyIfNecessary(sampleRate);
 
     // Create a new destination for offline rendering.
     m_renderTarget = AudioBuffer::create(numberOfChannels, numberOfFrames, sampleRate);
@@ -284,15 +274,6 @@ void AudioContext::uninitialize()
 bool AudioContext::isInitialized() const
 {
     return m_isInitialized;
-}
-
-bool AudioContext::isRunnable() const
-{
-    if (!isInitialized())
-        return false;
-    
-    // Check with the HRTF spatialization system to see if it's finished loading.
-    return m_hrtfDatabaseLoader->isLoaded();
 }
 
 void AudioContext::stopDispatch(void* userData)
